Bug 152508 - XWizardController creates pages which sizes allways falls back to first defined sizes when changing tab
Summary: XWizardController creates pages which sizes allways falls back to first defin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: sdk (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Ilhan Yesil
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-14 15:31 UTC by Ilhan Yesil
Modified: 2023-02-21 13:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilhan Yesil 2022-12-14 15:31:54 UTC
Description:
With XWizardController it is possible to create a TabControl with some Pages. The pages are created with a predefined size. The pages can beresized by user or by calling windows->setPosSize. But when another tab is selected, the page are resized to the originally defined size.

Steps to Reproduce:
1.Create Tabpages with XWizardController 
2.Change size manually or programmatically.
3.Select another tab

Actual Results:
The pages falls back to originally defined size.

Expected Results:
The pages should keep it's size.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8bdb85f8c7f31e51328afa51a584c3cfdea1c06f
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
9999TestM-NoUnit&Builds-NoPack-DebUti
Calc: CL threaded
Comment 1 Ilhan Yesil 2022-12-14 15:32:18 UTC
Self confirming according to https://wiki.documentfoundation.org/QA/Guidelines_for_public_and_private_sector_deployments. Issue has originally been reported by another user in our internal issue tracker.
Comment 2 Commit Notification 2022-12-29 13:47:03 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aef2ee893c7b76794bc9db869f08bbbea60606a8

tdf#152508 Initiate container request size after call of createPage

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-02-21 13:28:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b428a97d88b08fadd63039482c09c17a5fbac3be

Related: tdf#152508 and tdf#132110 use initial child size as size request

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.