Related: tdf#152508 and tdf#132110 use initial child size as size request

tdf#132110 works with this, and might be a better solution for tdf#152508
which doesn't have an explicit reproducer, but describes a similar
problem.

Change-Id: Ib9c39489fe37b77d6b905b891b975d2ab0d77289
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147386
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>